--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
           <li class="nav-item">
             <a href="#" class="nav-link">
               <span class="material-symbols-rounded">dashboard</span>
-              <span class="nav-label">Dashboard</span>
+              <span class="nav-label">仪表盘</span>
             </a>
             <ul class="dropdown-menu">
               <li class="nav-item">
-                <a class="nav-link dropdown-title">Dashboard</a>
+                <a class="nav-link dropdown-title">仪表盘</a>
               </li>
             </ul>
           </li>
@@ -48,7 +48,7 @@
           <li class="nav-item dropdown-container">
             <a href="#" class="nav-link dropdown-toggle">
               <span class="material-symbols-rounded">calendar_today</span>
-              <span class="nav-label">Services</span>
+              <span class="nav-label">服务</span>
               <span class="dropdown-icon material-symbols-rounded">
                 keyboard_arrow_down
               </span>
@@ -56,16 +56,16 @@
             <!-- Dropdown Menu -->
             <ul class="dropdown-menu">
               <li class="nav-item">
-                <a class="nav-link dropdown-title">Services</a>
+                <a class="nav-link dropdown-title">服务</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link dropdown-link">我是我是我是1</a>
+                <a href="#" class="nav-link dropdown-link">我是我是选项1</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link dropdown-link">我是我是我是2</a>
+                <a href="#" class="nav-link dropdown-link">我是我是选项2</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link dropdown-link">我是我是我是3</a>
+                <a href="#" class="nav-link dropdown-link">我是我是选项3</a>
               </li>
             </ul>
           </li>
@@ -73,11 +73,11 @@
           <li class="nav-item">
             <a href="#" class="nav-link">
               <span class="material-symbols-rounded">notifications</span>
-              <span class="nav-label">Notifications</span>
+              <span class="nav-label">通知</span>
             </a>
             <ul class="dropdown-menu">
               <li class="nav-item">
-                <a class="nav-link dropdown-title">Notifications</a>
+                <a class="nav-link dropdown-title">通知</a>
               </li>
             </ul>
           </li>
@@ -85,11 +85,11 @@
           <li class="nav-item">
             <a href="#" class="nav-link">
               <span class="material-symbols-rounded">local_library</span>
-              <span class="nav-label">Resources</span>
+              <span class="nav-label">资源</span>
             </a>
             <ul class="dropdown-menu">
               <li class="nav-item">
-                <a class="nav-link dropdown-title">Resources</a>
+                <a class="nav-link dropdown-title">资源</a>
               </li>
             </ul>
           </li>
@@ -98,7 +98,7 @@
           <li class="nav-item dropdown-container">
             <a href="#" class="nav-link dropdown-toggle">
               <span class="material-symbols-rounded">star</span>
-              <span class="nav-label">Bookmarks</span>
+              <span class="nav-label">书签</span>
               <span class="dropdown-icon material-symbols-rounded">
                 keyboard_arrow_down
               </span>
@@ -106,16 +106,16 @@
             <!-- Dropdown Menu -->
             <ul class="dropdown-menu">
               <li class="nav-item">
-                <a class="nav-link dropdown-title">Bookmarks</a>
+                <a class="nav-link dropdown-title">书签</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link dropdown-link">我是我是1</a>
+                <a href="#" class="nav-link dropdown-link">我是选项1</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link dropdown-link">我是我是2</a>
+                <a href="#" class="nav-link dropdown-link">我是选项2</a>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link dropdown-link">我是我是3</a>
+                <a href="#" class="nav-link dropdown-link">我是选项3</a>
               </li>
             </ul>
           </li>
@@ -123,11 +123,11 @@
           <li class="nav-item">
             <a href="#" class="nav-link">
               <span class="material-symbols-rounded">extension</span>
-              <span class="nav-label">Extensions</span>
+              <span class="nav-label">扩展</span>
             </a>
             <ul class="dropdown-menu">
               <li class="nav-item">
-                <a class="nav-link dropdown-title">Extensions</a>
+                <a class="nav-link dropdown-title">扩展</a>
               </li>
             </ul>
           </li>
@@ -135,11 +135,11 @@
           <li class="nav-item">
             <a href="#" class="nav-link">
               <span class="material-symbols-rounded">settings</span>
-              <span class="nav-label">Settings</span>
+              <span class="nav-label">设置</span>
             </a>
             <ul class="dropdown-menu">
               <li class="nav-item">
-                <a class="nav-link dropdown-title">Settings</a>
+                <a class="nav-link dropdown-title">设置</a>
               </li>
             </ul>
           </li>
@@ -150,11 +150,11 @@
           <li class="nav-item">
             <a href="#" class="nav-link">
               <span class="material-symbols-rounded">person</span>
-              <span class="nav-label">Profile</span>
+              <span class="nav-label">个人资料</span>
             </a>
             <ul class="dropdown-menu">
               <li class="nav-item">
-                <a class="nav-link dropdown-title">Profile</a>
+                <a class="nav-link dropdown-title">个人资料</a>
               </li>
             </ul>
           </li>
@@ -162,11 +162,11 @@
           <li class="nav-item">
             <a href="#" class="nav-link">
               <span class="material-symbols-rounded">logout</span>
-              <span class="nav-label">Logout</span>
+              <span class="nav-label">退出登录</span>
             </a>
             <ul class="dropdown-menu">
               <li class="nav-item">
-                <a class="nav-link dropdown-title">Logout</a>
+                <a class="nav-link dropdown-title">退出登录</a>
               </li>
             </ul>
           </li>
